--- a/css/style.css
+++ b/css/style.css
@@ -89,8 +89,7 @@ section {
   display: flex;
   align-items: center;
   padding: 0 9%;
-  background-image: url('../images/home.png');
-  background-repeat: no-repeat;
+  background: url('../home.png') no-repeat;
   background-size: cover;
   background-position: center;
 }
