--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ section {
   display: flex;
   align-items: center;
   padding: 0 9%;
-  background: url('./home.png') no-repeat;
+  background: url('AnimatedPortfolio/home.png') no-repeat;
   background-size: cover;
   background-position: center;
 }
